# linux_camera

./: CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: gallery_page.dart  main.dart  photo_viewer_page.dart  recent_media.dart  video_player_page.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/: camera_desktop.podspec
ios/camera_desktop/: Package.swift
lib/: camera_desktop.dart  linux_camera.dart  linux_camera_method_channel.dart  linux_camera_platform_interface.dart
lib/src/: camera_desktop_plugin.dart  camera_desktop_web.dart  image_stream_ffi.dart
linux/: CMakeLists.txt  camera.cc  camera.h  camera_desktop_plugin.cc  camera_texture.cc  camera_texture.h  device_enumerator.cc  device_enumerator.h  image_stream_ffi.cc  linux_camera_plugin.cc  linux_camera_plugin_private.h  photo_handler.cc  photo_handler.h  record_handler.cc  record_handler.h
macos/: camera_desktop.podspec
macos/Classes/: CameraSession.swift  (+6 more)
test/: camera_desktop_test.dart  linux_camera_method_channel_test.dart  linux_camera_test.dart
windows/: CMakeLists.txt  camera.cpp  camera.h  camera_desktop_plugin.cpp  camera_desktop_plugin.h  camera_texture.cpp  camera_texture.h  device_enumerator.cpp  device_enumerator.h  image_stream_ffi.cpp  logging.h  photo_handler.cpp  photo_handler.h  record_handler.cpp  record_handler.h
windows/include/camera_desktop/: camera_desktop_plugin.h
(+27 files in other folders)
